# starter-template

./: .gitignore  README.md  pyproject.toml
starter/: cadbuildr_plate_part.py  office_sign_assy.py  spacer_part.py
